<!--
  ~     strings.xml Created by Yamin Siahmargooei at 2021/7/1
  ~     This file is part of Fare.
  ~
  ~     Fare is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Fare is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Fare.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">کرایه</string>
    <string name="data_empty">متاسفانه داده ای یافت نشد</string>
    <string name="search">جستجو</string>
    <string name="map">نقشه</string>
    <string name="my_city">شهر من</string>
    <string name="settings">تنظیمات</string>
    <string name="exit">خروج</string>
    <string name="about">درباره</string>
    <string name="net_error">به نظر میاد دستگاه شما به اینترنت وصل نیست.</string>
    <string name="net_error_cache_data">به نظر میاد دستگاه شما به اینترنت وصل نیست. اطلاعات ذخیره‌شده قبلی به شما نمایش داده می‌شود.</string>
    <string name="app_license">پروانه برنامه</string>
    <string name="about_developer">درباره توسعه دهنده</string>
    <string name="send_feedback">ارسال انتقاد، نظر و پیشنهاد</string>
    <string name="feedback_text">در صورت داشتن هرگونه نظر، انتقاد یا پیشنهاد با تکمیل فرم زیر با ما در ارتباط باشید، وارد کردن راه ارتباطی با شما اختیاری است. راه ارتباطی شامل شماره تماس یا ایمیل شما است.</string>
    <string name="send">ارسال</string>
    <string name="your_feedback">بازخورد شما</string>
    <string name="user_contact">راه ارتباطی</string>
    <string name="feedback_created_success">بازخورد شما ثبت شد</string>
    <string name="no_feedback_text_entered">متنی برای بازخورد نوشته نشده</string>
    <string name="search_city">جستجوی شهر</string>
    <string name="select_state">انتخاب استان</string>
    <string name="app_crashed">مشکلی در برنامه پیش آمده، برای خروج اینجا را لمس کنید.</string>
    <string name="exit_prompt">آیا واقعا قصد خروج از برنامه را دارید؟</string>
    <string name="line_code_template">کد/نوع خط: %s</string>
    <string name="line_origin_template">مبدا: %s</string>
    <string name="line_destination_template">مقصد: %s</string>
    <string name="line_price_template">کرایه: %s</string>
    <string name="line_city_name_template">خطوط تاکسی %s</string>
    <string name="rial_template">%s ریال</string>
    <string name="destination">مقصد</string>
    <string name="origin">مبدا</string>
    <string name="line_code">کد/نوع خط</string>
    <string name="clear_search_filter">حذف فیلترهای جستجو</string>
    <string name="line_search_filter_notice">توجه:\nبرای محدود کردن جستجو از گزینه های زیر استفاده کنید.\nممکن است عبارت (مبدا/مقصد/کد) مورد نظر شما در لیست کشویی (دراپ داون) پیشنهادی موجود نباشد که این به معنی نبودنش نیست فقط کافیه توی فیلدهای پایین بنویسیدش و بعد جستجو کنید.</string>
    <string name="report_bad_data">گزارش نقص اطلاعات</string>
    <string name="line_feed_data">%s\n%s</string>
    <string name="price_notice">توجه شود نرخ مصوب و معیار توسط سازمان تاکسیرانی هر شهر تعیین می‌شود و در داخل تاکسی‌ها نصب شده است و معیار اصلی کاغذ نصب شده در داخل تاکسی و حرف رانندگان تاکسی عزیز است و آمارهای این نرم‌افزار بر اساس جدیدترین اخبار موجود است.</string>
    <string name="taxi_meter_city_notice">توجه: کرایه در این شهر به صورت تاکسی‌متر هم محاسبه می‌شود و معیارهای جستجو مختص به خود را دارد.</string>
    <string name="data_reference">منبع اطلاعات</string>
    <string name="more_info_header">اطلاعات بیشتر:</string>
    <string name="price_reference_header">منبع قیمت:</string>
    <string name="line_error_feedback_template">اطلاعات شهر %s ناقص است\nتوضیحات بیشتر:\n</string>
    <string name="please_wait">لطفا منتظر بمانید.</string>
    <string name="feedback_notice">اگر اطلاعات بیشتری لازم است وارد کنید، سپس بازخورد را ارسال کنید.</string>
    <string name="feedback_spam_notice">لطفا تا ارسال بازخورد بعدی 2 دقیقه صبر کنید.</string>
    <string name="list_to_grid">تغییر لیست به جدول</string>
    <string name="developers">توسعه:\nیمین سیاه‌مرگوئی\nیعقوب سیاه‌مرگوئی\n\nتست و ایده:\nشهریار مداح</string>
    <string name="license_header">این برنامه تحت لایسنس GPLv3 است که توضیحات بیشتر در پایین موجود است.\nلینک سورس برنامه:\nhttps://github.com/yamin8000/Fare</string>
    <string name="work_in_progress">در دست ساخت…</string>
    <string name="did_you_mean_this">آیا منظور شما این بود؟</string>
    <string name="city_set_as_current_city">این شهر پیشفرض شما شد و از طریق گزینه شهر من قابل دسترسی است.</string>
    <string name="no_my_city_added_yet">"شهر پیشفرضی انتخاب نشده، شهر مورد نظر را جستجو و انتخاب کنید تا پیشفرض شود."</string>
    <string name="day_night_switch">زمینه تاریک/زمینه روشن</string>
    <string name="app_help_text">فایده این برنامه چیه؟\nبا این برنامه به جای نگاه کردن به لیست های بلندبالا و معمولا ناخوانای خطوط تاکسی با یک جستجوی ساده قیمت تاکسی شهر مورد نظر خودتو پیدا کن.\nاین برنامه کجا استفاده میشه؟\nموقعی که توی شهر خودت از قیمت کرایه ها مطلع نیستی یا اینکه برای مسافرت به شهری رفتی که از قیمت ها اطلاع نداری.\nاین برنامه چه دسترسی هایی داره؟\nدسترسی به اینترنت.\nآیا برنامه برای فعالیتش نیازی به اینترنت داره؟\nبله برای دریافت اطلاعات شهرها و قیمت کرایه ها نیازه که به اینترنت وصل باشد ولی در این برنامه سعی میشه تا جای ممکن اطلاعات ذخیره بشه تا موقعی که اینترنت ندارید هم بتونید از برنامه استفاده کنید.\nبرای بهتر شدن برنامه چیکار میشه کرد؟\nنظرات و پیشنهادهایی که دارید برای ما ارسال کنید.\nقیمت کرایه های شهر من در برنامه موجود نیست، چه کاری میشه کرد؟\nمتاسفانه اطلاعات کرایه تاکسی خیلی از شهرها حتی کلانشهرهای کشور به صورت رسمی و به روز در سایت های رسمی شهرداری/سازمان تاکسیرانی/سازمان حمل و نقل مسافر و بار موجود نیست، اگر از لیست قیمت ها مطلع هستید، قیمت کرایه های شهر مورد نظر را با منبع رسمی برای ما ارسال کنید.</string>
    <string name="app_help">راهنمای برنامه</string>
    <string name="jump_up">رفتن به بالای لیست</string>
</resources>