<?xml version="1.0" encoding="utf-8"?><!--
  ~     fragment_home.xml Created by Yamin Siahmargooei at 2021/7/1
  ~     This file is part of Fare.
  ~
  ~     Fare is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Fare is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Fare.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/search_city_button"
        style="@style/HomeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/search"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/my_city_button"
        style="@style/HomeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/my_city"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/settings_button"
        style="@style/HomeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/settings"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="294dp" />

    <Button
        android:id="@+id/about_button"
        style="@style/HomeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/about"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="342dp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="search_city_button,my_city_button,settings_button,about_button"
        app:flow_horizontalGap="16dp"
        app:flow_horizontalStyle="packed"
        app:flow_maxElementsWrap="2"
        app:flow_verticalGap="16dp"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>