<?xml version="1.0" encoding="utf-8"?><!--
  ~     fragment_feedback.xml Created by Yamin Siahmargooei at 2021/7/7
  ~     This file is part of Fare.
  ~
  ~     Fare is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Fare is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Fare.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#433C3C">

    <Button
        android:id="@+id/send_feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintWidth_percent=".5"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="202dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedback_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="63dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedback_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/your_feedback"
            android:lines="5"
            android:maxLines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedback_contact_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedback_contact_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_contact"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/feedback_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/feedback_text"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="118dp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="feedback_text,feedback_contact_input,feedback_input,send_feedback"
        app:flow_verticalGap="16dp"
        app:flow_verticalStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>