<?xml version="1.0" encoding="utf-8"?><!--
  ~     search_line_fragment.xml Created by Yamin Siahmargooei at 2021/7/14
  ~     This file is part of Fare.
  ~
  ~     Fare is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Fare is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Fare.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/city_lines_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/list_to_grid"
        android:focusable="true"
        app:srcCompat="@drawable/ic_list_grid" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/search_city_lines_toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/search_city_line_menu">

                <!--I know what you thinking, adding a textview for toolbar which already has title property?-->
                <!--Given that default title behaviour is a stupid-ass implementation, I decided to implement it myself-->
                <TextView
                    android:id="@+id/city_lines_toolbar_title"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:gravity="right|center_vertical"
                    tools:ignore="RtlHardcoded"
                    tools:text="@tools:sample/lorem" />

            </com.google.android.material.appbar.MaterialToolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="vertical"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                <androidx.constraintlayout.helper.widget.Flow
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical"
                    app:constraint_referenced_ids="line_search_notice,line_code_input,line_origin_input,line_destination_input,line_search_filter_clear"
                    app:flow_verticalGap="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/line_search_notice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/line_search_filter_notice"
                    tools:layout_editor_absoluteY="8dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/line_code_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_search"
                    tools:layout_editor_absoluteY="41dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/line_code_auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/line_code"
                        android:imeOptions="actionSearch"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/line_destination_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_search"
                    tools:layout_editor_absoluteY="111dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/line_destination_auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/destination"
                        android:imeOptions="actionSearch"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/line_origin_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_search"
                    tools:layout_editor_absoluteY="181dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/line_origin_auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/origin"
                        android:imeOptions="actionSearch"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/line_search_filter_clear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/clear_search_filter"
                    tools:layout_editor_absoluteY="251dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/city_line_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="2"
        tools:listitem="@layout/search_line_item" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>